default.css
h3 {
	font-size: 27px;
}

h1 {
	font-size: 48px;
	font-family: 'Impact';
	display: inline-block;
}

#currentcolor {
	background-color: red;
	height: 64px;
	width: 64px;
}

#Background {
	background-color: rgb(187, 187, 221);
	border: 2px solid black;
	display: inline-block;
	margin-left: auto;
	margin-right: auto;
	width: auto;
	padding-left: 190px;
	padding-right: 190px;
	cursor: url("red.cur") 16 16, auto;
}

.guesses {
	vertical-align: top;
	display: inline-block;
	background-color: rgb(200, 200, 200);
	padding: 10px;
}

.guesses td {
	background-color: black;
	height: 36px;
	width: 36px;
}

td.arrow-container {
	background-color: rgb(200, 200, 200);
}

.responses {
	vertical-align: top;
	display: inline-block;
	background-color: rgb(200, 200, 200);
	padding-top: 10px;
	padding-left: -10px;
	padding-right: 10px;
	padding-bottom: 50px;
}
.responses td {
	background-color:black;
	height: 16px;
	width: 16px;
}

.colors {
	margin-left: auto;
	margin-right: auto;
	white-space: nowrap;
	width: max-content;
}

div.colors {
	margin-top: 2.5%;
	margin-bottom: 2.5%;
}

.colors h3, .colors-header {
	font-size: 20px;
	font-family: 'Impact';
	font-weight: normal;
}

.colors h3 {
	display: inline-block;
	line-height: 64px;
	margin-top: 0px;
	margin-bottom: 0px;
	vertical-align: top;
	margin-right: 5px;
}

#currentcolor {
	display: inline-block;
	border: 1px solid rgb(102, 102, 102);
}

.selections {
	vertical-align: top;
	display: inline-block;
}

.selections td {
	height: 100px;
	width: 100px;
}

table {
	margin-left: auto;
	margin-right: auto;
}

.content {
	text-align: center;
}

#ModalContainer{
    background-color: rgba(155, 155, 155, .5);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0px;
    display: none;
}

.modal {
    width: 40%;
    height: 30%;
    position: absolute;
    border: 1px solid black;
    left: 30%;
    top: 35%;
    background-color: white;
    padding: 20px;
}

.modal h3 {
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
}

.modal button {
	font-size: 1.5em;
    float: right;
    padding: .25em;
    border-radius: 10px;
	cursor: pointer;
	border: none;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    display: block;
    font-size: 1em;
    padding-left: 20px;
    padding-right: 20px;
    background-color: rgb(136, 235, 162);
    box-shadow: 0px 0px 2px 2px rgb(104, 196, 128) inset;
    top: 6%;
}

.modal button:hover {
    background-color: rgb(104, 196, 128);
    box-shadow: 0px 0px 2px 2px rgb(136, 235, 162) inset;
}

.modal p {
	text-align: left;
	margin-bottom: 1em;
}

button.help {
    height: 1.5em;
    width: 1.5em;
    border-radius: .75em;
    font-size: .75em;
    float: none;
    border: 2px ridge rgb(92, 127, 233);
    padding: 0px;
    background-color: rgb(184, 202, 255);
    box-shadow: none;
    font-weight: bold;
    position: relative;
    left: 17em;
}

.guess {
	font-weight: bold;
	margin-top: 1.5em;
	margin-bottom: 1.5em;
	cursor: pointer;
}

